[package]
name = "stan"
version = "0.1.0"
authors = ["Xiphoseer <xiphoseer@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
nom = "6"
nom-supreme = "0.4"
structopt = "0.3"
libtos = { path = "../libtos" }